lower features to zoom13, and path/track to zoom12 add mtb/ski/horse tags to transportation export only name:latin and name:nonlatin simplify landcover/water/boundary more aggressively add landcover on every level remove unnecessary attributes and use mergeNearbyPolygons do not add mnt peak line if it does not have name or ele